--- a/references.bib
+++ b/references.bib
@@ -3868,6 +3868,13 @@
   publisher={Springer}
 }
 
+@article{lekschas2024,
+  title={Jupyter scatter: Interactive exploration of large-scale datasets},
+  author={Lekschas, Fritz and Manz, Trevor},
+  journal={arXiv preprint arXiv:2406.14397},
+  year={2024}
+}
+
 @Book{		  unwin2018,
   title		= {Graphical data analysis with R},
   author	= {Unwin, Antony},
