--- a/_main.Rmd
+++ b/_main.Rmd
@@ -238,7 +238,7 @@ Placeholder
 ##### Group assignment indices {#group-indices}
 ##### Updating group assignment indices
 #### Aggregation: Reducers, reduceds, and summaries {#aggregation-summaries}
-##### Reducers
+##### Reducers {#reducers}
 ##### Reduced
 ##### Summaries {#summaries}
 #### Scales {#scales}
@@ -306,7 +306,7 @@ This proposed model of the data visualization pipeline naturally raises several 
 
 ### Why the model is necessary
 
-First, let's briefly reiterate why the model is even necessary. As discussed in Section \@ref(partitioning), when visualizing data, we render geometric objects representing parts of our data set. We establish these parts by conditioning on discrete variable, such as a categorical variable in a barplot or a binned continuous variable in a histogram. Often, we also want to further subdivide these parts by conditioning on another variable or variables. In particular, in interactive data visualization, this nested conditioning is a pre-requisite of linked selection, which naturally partitions the data according to the selection status.
+First, let's briefly restate the main argument presented throughout Section \@ref(problems). As discussed in Section \@ref(partitioning), when visualizing data, we render geometric objects representing parts of our data set. We create these parts by conditioning on some partitioning variable, such as a categorical variable in the case of a barplot or a binned continuous variable in the case of a histogram. Often, we also want to further subdivide these parts by conditioning on another variable or variables. In particular, in interactive data visualization, this nested conditioning is a pre-requisite of linked selection, which naturally partitions the data according to the selection status.
 
 After being subdivided into parts, the data is summarized via summary statistics and rendered as geometric objects. Importantly, the rendered objects should reflect the hierarchical part-whole structure created by the partitioning. This is the case with techniques like stacking, which represent the subdivided data subsets as highlighted parts of whole objects. While alternative techniques such as dodging or layering do exist, they provide a subpar solution for interactive graphics (see Section \@ref(stacking-part-whole)). 
 
@@ -346,10 +346,17 @@ During this project, I had time to think through and test out different implemen
 
 Currently, `plotscaper` offers a number of features for creating and manipulating interactive figures, many of which have been discussed either in Section \@ref(system) or in Section \@ref(applied-example). While these features can be used to create a fairly substantial range of useful interactive figures, there are of course many limitations and gaps when compared to other, better-established established data visualization packages. These will be discussed in this section. 
 
-First, `plotscaper` currently offers six plot types: scatterplots, barplots, histograms, fluctuation diagrams, histograms, two-dimensional histograms, and parallel coordinate plots. Additionally, normalized representations, such as spineplots and spinograms, are available for all aggregate plots. While these six plot types can already be used to create a wide range of useful interactive figures, there are numerous other plots which could be highly desirable in applied data analysis. Density plots, radar plots, mosaic plots, and maps, for example, may be compatible with the `plotscaper` model and could be potential additions in future versions of the package. Finally, all plots are specified in a nominal way, meaning that, for example, to add a scatterplot, we call the `add_scatterplot` function. While a system for specifying plots declaratively would be appealing, implementing such a system has presented challenges, and the issue will be discussed in more depth in Section \@ref(declarative-schemas).
+First, `plotscaper` currently offers six plot types: scatterplots, barplots, histograms, fluctuation diagrams, histograms, two-dimensional histograms, and parallel coordinate plots. Additionally, normalized representations, such as spineplots and spinograms, are available for all aggregate plots. While these six plot types can already be used to create a wide range of useful interactive figures, there are numerous other plots which could be highly desirable in applied data analysis. Density plots, radar plots, mosaic plots, and maps, for example, may be compatible with the `plotscaper` model and could be potential additions in future versions of the package. Furthermore, a relatively simple addition which could be useful would be horizontal barplots. Finally, all plots are specified in a nominal way, meaning that, for example, to add a scatterplot, we call the `add_scatterplot` function. While a system for specifying plots declaratively would be appealing, implementing such a system has presented challenges, and the issue will be discussed in more depth in Section \@ref(declarative-schemas).
 
-Second, as described in Section \@ref(system), `plotscaper` currently uses a simple transient-persistent product model for linked selection. Users can transiently select cases or assign them to permanent groups via click or click-and-drag interactions. The combination of transient and persistent selection results in $2 \times 4 = 8$ possible selection states per case.  This model facilitates simple conditional queries, such as "how many cases assigned to group X are also transiently selected?" For example, users can assign a bar in a barplot to a permanent group and transiently select a point cluster in a scatterplot to easily identify cases belonging to both. However, this model is, of course, fairly limited: it does not allow to combine selections with logical operators such as negation or exclusive difference. Implementing more comprehensive selection operators [see e.g. @urbanek2003; @urbanek2011; @theus2022; @wilhelm2008] would enable more sophisticated analytical workflows.       
+Second, as described in Section \@ref(system), `plotscaper` currently uses a simple transient-persistent product model for linked selection. Users can transiently select cases or assign them to permanent groups via click or click-and-drag interactions. The combination of transient and persistent selection results in $2 \times 4 = 8$ possible selection states per case.  This model facilitates simple conditional queries, such as "how many cases assigned to group X are also transiently selected?" For example, users can assign a bar in a barplot to a permanent group and transiently select a point cluster in a scatterplot to easily identify cases belonging to both. However, this model is, of course, fairly limited: it does not allow to combine selections with logical operators such as negation or exclusive difference. Implementing more comprehensive selection operators [see e.g. @urbanek2003; @urbanek2011; @theus2002; @wilhelm2008] would enable more sophisticated analytical workflows. Finally, selection geometry is currently restricted to point-clicks or rectangular regions defined by clicking-and-dragging. While these are fairly simple and intuitive, alternative selection strategies, such as a movable selection brush, a circular region expanding around a point, or arbitrary lasso/polygon, could prove beneficial in specific contexts [see e.g. @wills2008].
+
+Third, there are several other interactive features which could also be further polished, particularly. For instance, while it is currently possible to sort barplot bars by height, expanding sorting capabilities to other plot types and implementing alternative sorting schemes, such as sorting by the heights of highlighted segments, could be beneficial. Similarly, manual axis reordering in parallel coordinate plots could prove valuable. For continuous scales, the ability to interactively switch to alternative transformations, such as a logarithmic scale, would also be useful. Regarding querying, while the system currently supports querying of custom statistics aggregated via `Reducer`s, expanding the scope to non-monoidal statistics warrants consideration, as the requirements for statistics displayed in the query table are less stringent than those mapped to visual aesthetics. More generic model for parametric interaction (which will be touched on in Section \@ref(declarative-schemas)) would also be useful. Finally, there is wide a range of other, more ambitious features such as animation (time aesthetic) or semantic zooming, which could provide great utility in certain use-cases but which also present a substantial implementation overhead. 
+
 Third, plot and figure customization in `plotscaper` is currently fairly limited. While users can adjust attributes such as the figure layout and plot scales, surface-level graphical attributes like colors, margins, and axis styling are not yet exposed. Although the support for adding these customization options does exist, their implementation was not prioritized. They may be added in future package versions, when the API stabilizes more.
+
+Fourth, as will be discussed in more depth in Section \@ref(performance), while `plotscaper` provides decent performance even on moderately sized data sets (thousands or tens of thousands of data points), a particularly valuable feature for performance-sensitive applications would be the ability to register custom rendering backends. For example, GPU-based rendering could enable visualization of much larger datasets [to get some ideas of the scope, see e.g. @highschartsboost2022; @lekschas2024; @unwin2006]. Conversely, having the ability to switch to an SVG-based rendering backend could also be beneficial in certain scenarios. Currently, the rendering logic in `plotscaper` is fairly tightly integrated with the rest of the system, however, decoupling this logic would definitely be a priority for a potential major rewrite.  
+
+Fifth and finally, there are also many opportunities for additional features in the client-server communication. For instance, the ability to render arbitrary graphical elements (e.g. computed regression lines) within existing `plotscaper` plots or figures would be highly beneficial. Similarly, features such as dynamically switching `Reducer`s or sending the underlying summary statistics to the server (similar to querying) warrant consideration. Furthermore, more fine-grained selection controls could also prove useful. mportantly, many of these features may be implementable relatively quickly, as the underlying infrastructure is already in place.
 
 ### Declarative schemas {#declarative-schemas}
 
@@ -377,7 +384,7 @@ The third and final factor which makes declarative schemas challenging is reacti
 
 To summarize, modeling interactive data visualizations declaratively presents significant challenges. Specifically, the weak correspondence between data variables and aesthetics, the inherent hierarchical nature of graphics, and the necessity for reactive updates make the seemingly appealing model of "assign variable $x$ to aesthetic $y$" inadequate for capturing a wide range of popular interactive graphics. These issues are not unique to `plotscaper`
 
-### Performance
+### Performance {#performance}
 
 A key aspect to discuss is the performance of the delivered software. As discussed in Section \@ref(background), responsiveness is crucial for interactive data visualization. Slow systems frustrate users, negating any potential benefits of sophisticated features. Given today's expectation of highly responsive GUIs and the growing size of data sets, performance is an important concern.
 
